--- a/css/template1.css
+++ b/css/template1.css
@@ -20,6 +20,8 @@ header{
   max-width: 210px;
   margin-left: 90px;
   font-size: 20px;
+  padding: 7px; 
+  border-radius: 10px;
   
 }
 #banner :first-child p{
@@ -35,7 +37,7 @@ header{
 #banner{
     display: flex;
     justify-content: space-between;
-    padding: 60px 0 0;
+    padding: 40px 0 0;
     font-family:sans-serif
 }
 
@@ -145,16 +147,4 @@ background-size: contain;
   padding-left: 200px;
       text-align: left;
     }
- #lookat{
-    justify-content: space-between;
-    display: flex;
-   
-  
- }
-#student{
-  background-color: blue;
-  min-height: 10px;
-  min-width: 20px;
-  background-size: cover;
-   
-}
+ 
